--- a/.pylintrc
+++ b/.pylintrc
@@ -3,18 +3,19 @@ load-plugins=pylint_fastapi_plugin
 
 [MESSAGES CONTROL]
 # Enable FastAPI-specific rules
-enable=fastapi-route-decorator,
-       fastapi-model-conventions,
-       fastapi-dependency-check
+enable=fastapi
 
 # Disable some noisy rules if needed
 disable=missing-module-docstring,
-        missing-function-docstring,
-        missing-class-docstring,
-        too-few-public-methods
+        too-few-public-methods,
+        too-many-positional-arguments,
+        too-many-arguments,
+        too-many-locals,
+        broad-exception-caught,
+        redefined-builtin
 
 [FORMAT]
-max-line-length=88
+max-line-length=120
 
 [REPORTS]
 output-format=colorized
